fix height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
   width: 100%;
-  min-height: 100svh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,7 +37,7 @@ video {
 
 .screen {
   max-width: 1600px;
-  min-height: 100svh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
